package code.characters;

public interface Playable {
    public void setXP(int xp);
    public void changerXP(int xp);
    public int getXP();
}