package code.characters;

public interface MagicPower {
    public void changerMana(int mana);
    public void setMana(int mana);
    public int getMana();
}